          and write-permissions.d.

        - monotone now also tracks the workspaces of databases which
          do not reside in a "managed" location.

        - automate now resets the locale to "POSIX" internally.  This
          means that all scripts can expect the same untranslated
          messages from mtn automate, regardless of the locale of the
          calling process.

        New Features

        - 'mtn conflicts store' now outputs a count of the conflicts,
          and the name of the conflicts file.
          (fixes monotone issue 108)

        - New 'mtn list workspaces' command which outputs all the
          known workspaces for a specific database.
          (closes monotone issue 129)

        Bugs fixed

        - The internal line merger will actually preserve your line
          endings now, instead of changing everything to "\n".

        - Improve help, fix arg indexing in 'conflicts resolve_first'
          (fixes monotone issue 101)

        - A regression from 0.48 prevented monotone from ordering the
          diff output of individual files alphabetically.
          (fixes monotone issue 102)

        - 'mtn privkey' did not recognize private keys solely available
          in the key store. this has been fixed.

        - Add compatibility with Botan 1.9.9 and newer
          (fixes monotone issue 104)

        - mtn pull and mtn sync would always say that your workspace
          has not been updated.  Now, it only does that when you used
          the --update option and there were no updates.
          (fixes monotone issue 106)

        - 'automate remote' and 'automate remote_stdio' now use
          a given database given by an alias to read, store and validate
          a remote server's key fingerprint (fixes monotone issue 95)

        - monotone gives a proper error message now if a netsync URI
          with the 'mtn' scheme misses the required host part
          (fixes monotone issue 110)
